updated app view nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,21 @@
 
   <body>
     <header>
+      
+      <nav class="app-header__nav">
+        <ul class="nav app-header__site-nav-container">
+          <%# if @login_user %>
+            <li class="nav-item app-header__nav_item">
+              <%= link_to "Log Out", logout_path, method: :delete, class: "btn btn-primary" %>
+            </li>
+          <%# else %>
+            <li class="nav-item app-header__nav_item">
+              <%= link_to "Login with Github", github_login_path, class: "btn btn-primary" %>
+            </li>
+          <%# end %>
+        </ul>
+      </nav>
+
       <section class="flash-msg__section">
         <% flash.each do |name, message| %>
           <strong class="<%= name %>">
@@ -18,16 +33,6 @@
           </strong>
         <% end %>
       </section>
-
-      <%# if @login_user %>
-        <li class="nav-item app-header__nav_item">
-          <%= link_to "Log Out", logout_path, method: :delete, class: "btn btn-primary" %>
-        </li>
-      <%# else %>
-        <li class="nav-item app-header__nav_item">
-          <%= link_to "Login with Github", github_login_path, class: "btn btn-primary" %>
-        </li>
-      <%# end %>
 
     </header>
     <%= yield %>
