--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Betsy</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    <header>
-      
-      <nav class="app-header__nav">
-        <ul class="nav app-header__site-nav-container">
-          <% if session[:user_id] %>
-            <li class="nav-item app-header__nav_item">
-              <%= link_to "Log Out", logout_path, method: :delete, class: "btn btn-primary" %>
-            </li>
-          <% else %>
-            <li class="nav-item app-header__nav_item">
-              <%= link_to "Login with Github", github_login_path, class: "btn btn-primary" %>
-            </li>
-          <% end %>
-        </ul>
-      </nav>
-
-      <section class="flash-msg__section">
-        <% flash.each do |name, message| %>
-          <strong class="<%= name %>">
-            <%= message %>
-          </strong>
-        <% end %>
-      </section>
-
-    </header>
-    <%= yield %>
-  </body>
+	<head>
+		<title>Betsy</title>
+		<%= csrf_meta_tags %>
+		<%= csp_meta_tag %>
+		<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+		<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+	</head>
+	<body>
+		<header>
+			<nav class="app-header__nav">
+				<ul class="nav app-header__site-nav-container">
+					<% if @logged_user %>
+						<li class="nav-item app-header__nav_item">
+							<%= link_to "Log Out", logout_path, method: :delete, class: "btn btn-primary" %>
+						</li>
+					<% else %>
+						<li class="nav-item app-header__nav_item">
+							<%= link_to "Login with Github", github_login_path, class: "btn btn-primary" %>
+						</li>
+					<% end %>
+				</ul>
+			</nav>
+			<section class="flash-msg__section">
+				<% flash.each do |name, message| %>
+					<strong class="<%= name %>">
+						<%= message %>
+					</strong>
+				<% end %>
+			</section>
+		</header>
+		<%= yield %>
+	</body>
 </html>
