--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,4 +6,16 @@
         <p> <%= @product.stock %> </p>
         <%= image_tag @product.photo_url, alt: "products packaging appearance" %>
 	</section>
+
+        <%= form_with model: @order_item, url: product_order_items_path(@product.id), class: 'order_item-form' do |f| %> 
+                <section>
+                <%= f.label :quantity %>
+                <%= f.text_field :quantity %> 
+                </section>
+
+                <%= f.submit "Add to Cart" ,class: "order_item-button" %>
+        <% end %>
 </main>
+
+
+
