--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,9 +1,9 @@
 <section>
 	<%= form_with model: @product do |f| %>
-		<%# <div class="form-group">
+		<%= <div class="form-group">
 			<%= f.label :category %>
-			<%# <%= f.select :category, options_for_select(["TODO", "ADD ALL CATEGORIES HERE"]), {}, class: "form-control" %>
-		<%# </div> %>
+			<%= f.select :category, options_for_select(:product, :category_ids, Category.all, :id, :name), class: "form-control" %>
+		<%= </div> %>
 		<div class="form-group">
 			<%= f.label :name %>
 			<%= f.text_field :name, class: "form-control" %>
