--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,8 +1,8 @@
 <section>
 	<%= form_with model: @category do |f| %>
 		<div class="form-group">
-			<%= f.label :category %>
-			<%= f.text_field :category, class: "form-control" %>
+			<%= f.label :name %>
+			<%= f.text_field :name, class: "form-control" %>
 		</div>
 		<div class="form-group">
 			<%= f.submit class: "btn btn-primary" %>
