--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -17,7 +17,13 @@
 					<tr>
 						<td><%= link_to(product.name, product_path(product.id)) %></td>
 						<td><%= product.price %></td>
-						<td><%= order_item.quantity %></td>
+						<td>
+							<div class = "form">
+								<%= form_with model: order_item, method: :patch  do |f| %>
+									<%= f.select :quantity, options_for_select(make_range(order_item.stock), order_item.quantity), {}, onchange: "this.form.submit();" %>
+								<% end %>
+							</div>
+						</td>
 						<td> <%= order_item.calculate_total %> </td>
 						<td><%= link_to("Remove", order_item_path(order_item.id), method: :delete) %></td>
 					</tr>
