--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,7 +3,8 @@
 		<div class="form-group" >
 			<%= f.label :category %>
 			<%= f.select :category, options_for_select(@categories), class: "form-control" %>
-			<%# <%= f.select :category, collection_check_boxes(@categories, Category.all, :name, {:multiple => true}), class: "form-control" %> %>
+			<%# f.select :category, collection_check_boxes(@categories, Category.all, :name, {:multiple => true}), class: "form-control" %>
+			<%# f.select :category, collection_select(:user, :category_ids, @categories, :id, :name, {:prompt => true, :multiple=>true }) %>
 		</div>
 		
 		<div class="form-group">
