added an edit and update function to order so that a user can input their CC and other information

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -31,5 +31,6 @@
 			</tbody>
 		</table>
 		<p>Order Total: <%=@current_order.calculate_order_total %></p>
+	<p><%= link_to"Continue to checkout", edit_order_path(@current_order),class: "btn btn-primary" %></p>
 	</section>
 </main>
