added finalize and confirmation actions to orders controller for completing placing order, added model logic to order items to make sure quantity of an item is in stock, added confirmation render page to render order receipt and finalize render page to give user the option of confirming or cancelling order. added cancelling order action to orders controller.

--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,5 +1,5 @@
 <section>
-	<%= form_with model: @order do |f| %>
+	<%= form_with model: @current_order do |f| %>
 		<div class="form-group">
 			<%= f.label :email_address %>
 			<%= f.text_field :email_address, class: "form-control" %>
