--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,3 @@
-<h2> Add new Product </h2>
-<%= render partial: "form", locals: { action_name: "Add New Product" } %>
+<h2> Add Review </h2>
+<%= render partial: "form", locals: { action_name: "Add Review" } %>
 
