--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,8 @@
 <h1>User Show Page</h1>
 <p>Name: <%=@user.name%></p>
+<% @user.products.each do |product|%>
+	<%= product.name %>
+	<%= product.price %>
+	<%= product.description %>
+	<p> TODO pics </p>
+<% end %>
