--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,6 +19,8 @@
         <br>
         <section class="reviews">
                 <%= link_to "Leave a Review", new_product_review_path(@product.id), class: "btn btn-primary" %>
+                <h2> Average Rating: </h2>
+                <%= @product.average_rating %> / 5
 
                 <h4>Reviews</h4>
                 <table class="table">
