changed the schema to reflect product status, added a default product status for Product controller, added my accounts route to see a merchants order item history

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,6 +4,8 @@
         <p>  <%= @product.description %> </p>
         <p> $ <%= @product.price%> </p>
         <p> <%= @product.stock %> </p>
+        <p> Status: <%= @product.product_status %> </p>
+
         <%= image_tag @product.photo_url, alt: "products packaging appearance" %>
 	</section>
 
