--- a/app/views/users/myaccount.html.erb
+++ b/app/views/users/myaccount.html.erb
@@ -1,30 +1,33 @@
 <h1><%=@logged_user.name%></h1>
 <h2>Date Joined: <%=@logged_user.created_at.strftime("%B %d, %Y")%></h2>
-
 <main>
 	<h2>List of Order Items</h2>
 	<section class="order-items-table">
 		<table class="table">
 			<thead>
 				<tr>
+					<th>Product</th>
 					<th>Name</th>
 					<th>Price</th>
-					<th>Description</th>
-					<th>Photo</th>
 					<th>Stock</th>
+					<th>Edit</th>
+					<th>Status</th>
 				</tr>
 			</thead>
 			<tbody>
 				<% @products.each do |product| %>
 					<tr>
+						<td><%= image_tag product.photo_url, alt: "products packaging appearance" %></td>
 						<td><%= link_to(product.name, product_path(product.id)) %></td>
 						<td><%= product.price %></td>
-						<td><%= product.description %></td>
-						<td><%= image_tag product.photo_url, alt: "products packaging appearance" %></td>
 						<td><%= product.stock %></td>
+						<td><%= link_to("Edit", edit_product_path(product.id)) %></td>
+						<td><%= link_to(product.product_status == "active" ? "Inactivate" : "Activate", change_product_status_path(product.id), method: :patch) %></td>
 					</tr>
 				<% end %>
 			</tbody>
 		</table>
 	</section>
 </main>
+
+
