--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,9 @@
 					</li>
 					<% if @logged_user %>
 						<li class="nav-item app-header__nav_item">
+							<%= link_to "My Account", myaccount_path, class: "btn btn-primary" %>
+						</li>
+						<li class="nav-item app-header__nav_item">
 							<%= link_to "Log Out", logout_path, method: :delete, class: "btn btn-primary" %>
 						</li>
 					<% else %>
