--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,13 +8,12 @@
 				<p> Status: <%= @product.product_status %> </p>
 				<%= image_tag @product.photo_url, alt: "products packaging appearance" %>
 			</section>
-			<%= form_with model: @order_item, url: product_order_items_path(@product.id), class: 'order_item-form' do |f| %>
-				<section>
-					<%= f.label :quantity %>
-					<%= f.text_field :quantity %>
-				</section>
-				<%= f.submit "Add to Cart" ,class: "order_item-button" %>
-			<% end %>
+			<div class = "form">
+				<%= form_with model: @order_item, url: product_order_items_path(@product.id), class: 'order_item-form' do |f|%>
+					<%= f.select :quantity, options_for_select(make_range(@product.stock)) %>
+					<%= f.submit "Add to Cart" ,class: "order_item-button" %>
+				<% end %>
+			</div>
 			<br>
 			<section class="reviews">
 				<%= link_to "Leave a Review", new_product_review_path(@product.id), class: "btn btn-primary" %>
