--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
-<h1>User Show Page</h1>
-<p>Name: <%=@user.name%></p>
-<% @user.products.each do |product|%>
-	<%= product.name %>
-	<%= product.price %>
-	<%= product.description %>
-	<p> TODO pics </p>
-<% end %>
+<section>
+	<h1>User Show Page</h1>
+	<p>Name: <%=@user.name%></p>
+	<% @user.products.each do |product|%>
+		<p><%= product.name %></p>
+		<p><%= product.price %></p>
+		<p><%= product.description %></p>
+		<%= image_tag product.photo_url, alt: "products packaging appearance" %>
+	<% end %>
+</section>
