--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header class="app-header">
-			<nav class="app-header__nav">
+			<nav class="navbar navbar-expand-lg navbar-light fixed-top">
 				<a class="navbar-brand" href="<%= root_path %>">p3tsy</a>
 				<ul class="nav app-header__site-nav-container">
 					<li class="nav-item dropdown">
@@ -33,7 +33,7 @@
 						</div>
 					</li>
 					<li class="nav-item app-header__nav_item">
-						<%= link_to "View All Products", products_path, class: "btn btn-primary" %>
+						<a class="nav-link" href="<%= products_path%>"> View All Products</a>
 					</li>
 					<% if @logged_user %>
 						<li class="nav-item app-header__nav_item">
