Added hero image to homepage

--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -1,10 +1,15 @@
-<section>
-    <h1>Welcome!</h1>
+<section id="homepage-hero-image">
+    <div class="hero-image d-md-block">
+        <img src="https://i.imgur.com/ACNTG1b.jpg" />
+        <div class="hero-text">
+            <h1>Only the Best for Your Best Friend</h1>
+        </div>
+    </div>
 </section>
 <hr>
 
-<section>
-    <h2>Only the Best for Your Pet</h2>
+<section >
+    <h2>Discover Pawmazing Deals</h2>
     <p>blah blah blah buy some pet stuff</p>
     <%= link_to "All Products", products_path, class: "btn btn-primary" %>
 </section>
