--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,37 @@ body {
     color: #333333;
 }
 
+h1 {
+    font-size: 6rem;
+}
+
+// Hero Image
+
+.hero-image {
+    width: 100%;
+    display: inline-block;
+}
+
+.hero-image img {
+    width: 100vw;
+}
+
+.hero-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    text-align: center;
+
+    color: white;
+    padding: 0;
+    margin: 0;
+    font-weight: bold;
+    font-size: 6rem;
+    text-shadow: 2px 2px #2d3142;
+}
+
 // Products
 
 .product-container {
