--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,16 @@
 		</header>
 
 		<%= yield %>
+		<footer>
+		<div class="padded-container">
+		<%# add columns of info %>
+		</div>
+		<div class="copyright">
+			<p>
+				© 2018 Copyright: Paw Pack
+			</p>
+		</div>
+		</footer>
 	</body>
 	
 </html>
