--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,12 +75,19 @@ h1 {
 // Products
 
 .product-container {
-    width: 300px;
+    padding-top: 2rem;
+    width: 18rem;
+    border: 1px solid rgba(0,0,0,0.125);
   }
 
 .product-container img {
     max-height: 100%;
     max-width: 100%;
+}
+
+.product-container-details {
+    padding: 1.25rem;
+    padding-bottom: 2rem;
 }
 
 // Footer
