--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -19,10 +19,7 @@
     <h2>Featured Product</h2>
     <% if !@products.empty?%>
         <% featured = Product.spotlight(@products)%>
-        <div class="product-container">
-            <h3> <%= link_to(featured.name, product_path(featured.id)) %> <h3>
-            <%= image_tag featured.photo_url, alt: "products packaging appearance" %>
-        </div>
+        <%= render partial: "layouts/product_card", locals:{product:featured}%>
     <% else%>
         <h3>Coming Soon</h3>
     <% end%>
@@ -32,10 +29,7 @@
 <section id="homepage-top-rated" class ="padded-container">
     <h2>Top Rated Products</h2>
     <% Product.top_rated(@products).each do |product|%>
-        <div class="product-container">
-            <h3> <%= link_to(product.name, product_path(product.id)) %> <h3>
-            <%= image_tag product.photo_url, alt: "products packaging appearance" %>
-        </div>
+        <%= render partial: "layouts/product_card", locals:{product:product}%>
     <% end%>
 
 </section>
