--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,30 +2,11 @@
 	<section id="category-products" class="padded-container">
 		<h2>Products under: <%= @category.name.capitalize%></h2>
 		<br>
-		<section class="media-table">
-			<table class="table">
-				<thead>
-					<tr>
-						<th>Name</th>
-						<th>Price</th>
-						<th>Description</th>
-						<th>Photo</th>
-						<th>Stock</th>
-					</tr>
-				</thead>
-				<tbody>
-					<% @category.products.each do |product| %>
-						<tr>
-							<td><%= link_to(product.name, product_path(product.id)) %></td>
-							<td><%= product.price %></td>
-							<td><%= product.description %></td>
-							<td class="product-container"><%= image_tag product.photo_url, alt: "products packaging appearance" %></td>
-							<td><%= product.stock %></td>
-						</tr>
-					<% end %>
-				</tbody>
-			</table>
-		</section>
+		<div class="flex-container">
+			<% @category.products.each do |product|%>
+				<%= render partial: "layouts/product_card", locals:{product:product}%>
+			<% end%>
+		</div>
 	</section>
-	</main>
+</main>
 
