added meet the team page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,3 +35,29 @@ body {
     padding-right: 30px;
     color: #333333;
   }
+
+
+.meet-the-team-page {
+
+    text-align: center;
+}
+
+.team-header {
+    background-color: pink;
+    color: whitesmoke;
+    padding: 100px;
+}
+  .meet-team {
+    padding: 30px;
+}
+
+  .team-members {
+      margin: auto;
+
+  }
+
+  .bio {
+      margin: auto;
+      text-align: center;
+      padding: 30px;
+  }
