--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,4 +1,4 @@
-<section>
+<section class="padded-container">
 	<%= form_with model: @current_order do |f| %>
 		<div class="form-group">
 			<%= f.label :email_address %>
