--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
-<h1>users</h1>
-<%@users.each do |user|%>
-  <p>User: <%=user.name%></p>
-<%end%>
+<section class="padded-container">
+  <h1>users</h1>
+  <%@users.each do |user|%>
+    <p>User: <%=user.name%></p>
+  <%end%>
+</section>
