--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,7 +85,17 @@ h1 {
     border: 1px solid rgba(0,0,0,0.125);
 }
 
+.product-container-large {
+    padding-top: 2rem;
+    width: 25rem;
+}
+
 .product-container img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.product-container-large img {
     max-height: 100%;
     max-width: 100%;
 }
