--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: "form", locals: {action_name: "Edit Product" } %>
+<div class="padded-container">
+    <%= render partial: "form", locals: {action_name: "Edit Product" } %>
+</div>
