--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,5 @@
-<h2> Add new Product </h2>
-<%= render partial: "form", locals: { action_name: "Add New Product" } %>
-
+<div class="padded-container">
+    <h2> Add new Product </h2>
+    <br>
+    <%= render partial: "form", locals: { action_name: "Add New Product" } %>
+</div>
