--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,4 @@
-<h2> Add Review </h2>
-<%= render partial: "form", locals: { action_name: "Add Review" } %>
-
+<section class="padded-container">
+    <h2> Add Review </h2>
+    <%= render partial: "form", locals: { action_name: "Add Review" } %>
+</section>
