--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,5 @@
-<h2><%= @category.name.capitalize%></h2>
+<section class="padded-container">
+	<h2><%= @category.name.capitalize%></h2>
 	<section class="media-table">
 		<table class="table">
 			<thead>
@@ -23,4 +24,4 @@
 			</tbody>
 		</table>
 	</section>
-
+</section>
