Fixed bug in homepage view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,7 @@ nav a:hover {
 // Body
 
 body { 
+    font-family: 'Open Sans', sans-serif;
     padding-top: 3rem;
     color: #333333;
 }
@@ -41,8 +42,9 @@ body {
     padding: 4rem;
 }
 
-h1 {
+h1, h2 {
     font-size: 6rem;
+    font-family: 'Lato', sans-serif;
 }
 
 // Hero Image
