--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -28,10 +28,12 @@
 
 <section id="homepage-top-rated" class ="padded-container">
     <h2>Top Rated Products</h2>
-    <div class="flex-container">
-        <% Product.top_rated(@products).each do |product|%>
-            <%= render partial: "layouts/product_card", locals:{product:product}%>
-        <% end%>
-    </div>
-
+    <% if !@products.empty?%>
+        <div class="flex-container">
+            <% Product.top_rated(@products).each do |product|%>
+                <%= render partial: "layouts/product_card", locals:{product:product}%>
+        </div>
+    <% else%>
+        <h3>Coming Soon</h3>
+    <% end%>
 </section>
