--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,7 @@ body {
 }
 
 h1, h2 {
-    font-size: 6rem;
+    font-size: 3rem;
     font-family: 'Lato', sans-serif;
 }
 
@@ -58,7 +58,7 @@ h1, h2 {
     width: 100vw;
 }
 
-.hero-text {
+.hero-text h1{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -70,7 +70,7 @@ h1, h2 {
     padding: 0;
     margin: 0;
     font-weight: bold;
-    font-size: 6rem;
+    font-size: 7vw;
     text-shadow: 2px 2px #2d3142;
 }
 
@@ -95,6 +95,8 @@ h1, h2 {
 .product-container img {
     max-height: 100%;
     max-width: 100%;
+    display: block;
+    margin: auto;
 }
 
 .product-container-large img {
